# catchbot

./: .gitignore  .gitmodules  README.md  trajectory_prediction.ipynb
expr/: Makefile  data.txt  expr.cpp  plot.py
expr_linux/: CMakeLists.txt
expr_linux/src/: catchbot_node.cpp  kinematics.cpp  mocap_client.cpp
src/catchbot/air_friction_plugin/: CMakeLists.txt  README.md  package.xml
src/catchbot/air_friction_plugin/include/air_friction_plugin/: air_friction.h
src/catchbot/air_friction_plugin/src/: air_friction.cpp
src/catchbot/catchbot/: CMakeLists.txt  package.xml
src/catchbot/catchbot/models/ball/: model.sdf
src/catchbot/catchbot/msg/: LogicalCam.msg
src/catchbot/catchbot/scripts/: catchbot_main.py  catchbot_setup.py  gen_ball.py
src/catchbot/catchbot/src/: catchbot_air_friction.cpp  catchbot_node.cpp  kinematics.cpp  kinmematics.cpp
src/catchbot/catchbot_description/: CMakeLists.txt  package.xml
src/catchbot/catchbot_description/urdf/: catchbot.urdf.xacro
src/catchbot/catchbot_gazebo/: CMakeLists.txt  package.xml
src/catchbot/catchbot_gazebo/controller/: arm_controller_ur5e.yaml
src/catchbot/catchbot_gazebo/launch/: catchbot_gazebo.launch  controller_utils.launch
src/catchbot/gazebo_grasp_plugin/include/gazebo_grasp_plugin/: GazeboGraspFix.h
src/catchbot/gazebo_grasp_plugin/src/: GazeboGraspFix.cpp
