<?xml version="1.0"?>
<package>
	<name>catchbot</name>
	<version>1.0.0</version>
	<description>Implementation of catchbot</description>
	<maintainer email="ustcsiwei88@gmail.com">Siwei Feng</maintainer>
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>
</package>